--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_CONNECTION_STRING=mysql://bhavesh:p!ssw0rd1234@hadiyabackendserver.mysql.database.azure.com:3306/hadiya_products
+DB_CONNECTION_STRING=mysql://bhavesh:p!ssw0rd1234@hadiyaserver.mysql.database.azure.com:3306/hadiya_products
